add screen scanner

--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -1,6 +1,6 @@
 <ion-tabs>
   <ion-tab-bar slot="bottom">
-    <ion-tab-button tab="home" href="/tabs/home">
+    <ion-tab-button tab="home" href="/app/home">
       <ion-icon aria-hidden="true" name="chatbubble"></ion-icon>
     </ion-tab-button>
 
