add candidate list

--- a/src/app/auth/sign-in/sign-in.page.html
+++ b/src/app/auth/sign-in/sign-in.page.html
@@ -45,6 +45,9 @@
         <ion-note color="medium" class="ion-margin-horizontal p-8 text-center">
           Belum punya akun ? <ion-button (click)="signUp()" class="btn-text">Daftar</ion-button>
         </ion-note>
+        <ion-note>
+          <div class="version">V.{{ version }}</div>
+        </ion-note>
       </ion-col>
     </ion-row>
   </ion-grid>
