--- a/src/app/auth/sign-in/sign-in.page.scss
+++ b/src/app/auth/sign-in/sign-in.page.scss
@@ -6,3 +6,10 @@ ion-note {
   display: flex;
   align-items: center;
 }
+
+.version {
+  margin-top: 32px;
+  display: flex;
+  width: 100%;
+  justify-content: center;
+}
