--- a/src/app/tabs/account/account.page.html
+++ b/src/app/tabs/account/account.page.html
@@ -44,6 +44,11 @@
         <ion-button expand="block" (click)="signOut()">Keluar</ion-button>
       </ion-col>
     </ion-row>
+    <ion-row>
+      <ion-col>
+        <div class="version">Version : {{ version }}</div>
+      </ion-col>
+    </ion-row>
   </ion-grid>
 
 </ion-content>
