--- a/src/app/tabs/account/account.page.scss
+++ b/src/app/tabs/account/account.page.scss
@@ -2,3 +2,10 @@
   width: 100%;
   height: 16px;
 }
+
+.version {
+  margin-top: 32px;
+  display: flex;
+  width: 100%;
+  justify-content: center;
+}
