add vote checkin

--- a/src/app/vote/scan/scan.page.html
+++ b/src/app/vote/scan/scan.page.html
@@ -16,7 +16,7 @@
 </div>
 <div class="line-scanner" [ngClass]="{'hide':!scannerEnabled}"></div>
 <zxing-scanner
-  class="desktop"
+  [ngClass]="{'mobile':isMobile, 'desktop':!isMobile}"
   [enable]="scannerEnabled"
   [formats]="allowedFormats"
   [(device)]="cameraDevice"
