--- a/src/app/tabs/home/home.page.scss
+++ b/src/app/tabs/home/home.page.scss
@@ -6,6 +6,9 @@ ion-card.post {
   margin-inline-start: 0px;
   margin-inline-end: 0px;
   border-radius: 0px;
+  .date {
+    margin-top: 16px;
+  }
 }
 
 .button-more {
