--- a/src/app/tabs/menu/menu.page.html
+++ b/src/app/tabs/menu/menu.page.html
@@ -36,6 +36,18 @@
         </ion-card>
       </ion-col>
     </ion-row>
+    <ion-row>
+      <ion-col>
+        <ion-card color="primary" (click)="navigateTo('app/profiling')">
+          <div class="menu-item-icon">
+            <img alt="Menu Voting" [src]="deployUrl+'assets/app/menu/ribbon-outline.svg'" />
+          </div>
+          <ion-card-header>
+            <ion-card-subtitle class="text-center">Kelola Visi Misi ANDA</ion-card-subtitle>
+          </ion-card-header>
+        </ion-card>
+      </ion-col>
+    </ion-row>
   </ion-grid>
 
 </ion-content>
