--- a/src/app/vote/candidate-list/candidate-list.page.html
+++ b/src/app/vote/candidate-list/candidate-list.page.html
@@ -4,27 +4,51 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
+<ion-content [fullscreen]="false">
 
   <ng-container *ngIf="!loading; else loader">
 
-    <ion-header collapse="condense">
-      <ion-toolbar>
-        <ion-title size="medium">{{ category }}</ion-title>
-      </ion-toolbar>
-    </ion-header>
+    <ng-container *ngIf="isVotingFinished;  else emptyState">
+      <ion-card *ngFor="let item of candidateSelectedList">
+        <ion-card-header>
+          <ion-card-subtitle>{{ item?.category_name }}</ion-card-subtitle>
+        </ion-card-header>
+        <ion-card-content>
+          <ion-list>
+            <ion-item>
+              <ion-thumbnail slot="start">
+                <img alt="{{ item.candidate_name }}" [src]="item.photo"/>
+              </ion-thumbnail>
+              <ion-label>{{ item.candidate_name }}</ion-label>
+            </ion-item>
+          </ion-list>
+        </ion-card-content>
+      </ion-card>
 
-    <ion-refresher slot="fixed" (ionRefresh)="refresh($event)">
-      <ion-refresher-content></ion-refresher-content>
-    </ion-refresher>
+      <ion-grid>
+        <ion-row>
+          <ion-col>
+            <ion-button (click)="navigateBack()" expand="block" shape="round">Kembali</ion-button>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
 
-    <ion-card *ngFor="let item of candidates">
-      <img alt="Menu Voting" [src]="images.get(item.photo_checksum)"/>
-      <ion-card-header>
-        <ion-card-subtitle>{{ item.candidate_name }}</ion-card-subtitle>
-      </ion-card-header>
-      <ion-button fill="clear" (click)="navigateTo(item)">Lihat Detail</ion-button>
-    </ion-card>
+    </ng-container>
+
+    <ng-container *ngIf="categories.length > 0 && !isVotingFinished">
+
+      <ion-refresher slot="fixed" (ionRefresh)="refresh($event)">
+        <ion-refresher-content></ion-refresher-content>
+      </ion-refresher>
+
+      <ion-card *ngFor="let item of candidates">
+        <img alt="Menu Voting" [src]="item.photo"/>
+        <ion-card-header>
+          <ion-card-subtitle>{{ item.candidate_name }}</ion-card-subtitle>
+        </ion-card-header>
+        <ion-button fill="clear" (click)="navigateTo(item)">Lihat Detail</ion-button>
+      </ion-card>
+    </ng-container>
   </ng-container>
 
   <ng-template #loader>
@@ -35,6 +59,19 @@
       <div class="loader-content">
         <ion-spinner name="circles"></ion-spinner>
         <span>Mohon Menunggu</span>
+      </div>
+    </div>
+  </ng-template>
+
+  <ng-template #emptyState>
+    <div class="center-content empty" *ngIf="categories.length <= 0">
+      <div class="illustration">
+        <svg style="width: 100px;" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-8 h-8">
+          <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 13.5h3.86a2.25 2.25 0 012.012 1.244l.256.512a2.25 2.25 0 002.013 1.244h3.218a2.25 2.25 0 002.013-1.244l.256-.512a2.25 2.25 0 012.013-1.244h3.859m-19.5.338V18a2.25 2.25 0 002.25 2.25h15A2.25 2.25 0 0021.75 18v-4.162c0-.224-.034-.447-.1-.661L19.24 5.338a2.25 2.25 0 00-2.15-1.588H6.911a2.25 2.25 0 00-2.15 1.588L2.35 13.177a2.25 2.25 0 00-.1.661z" />
+        </svg>
+      </div>
+      <div class="empty-content">
+        <span>Data Kosong</span>
       </div>
     </div>
   </ng-template>
