--- a/src/app/vote/scan/scan.page.scss
+++ b/src/app/vote/scan/scan.page.scss
@@ -43,6 +43,7 @@ $color: #007EFF;
   align-items: center;
   padding-left: 15px;
   ion-icon {
+    color: black;
     width: 32px;
     height: 32px;
   }
