--- a/src/app/tabs/menu/menu.page.html
+++ b/src/app/tabs/menu/menu.page.html
@@ -26,7 +26,7 @@
         </ion-card>
       </ion-col>
       <ion-col>
-        <ion-card color="primary" (click)="navigateTo('vote/dashboard')">
+        <ion-card color="primary" (click)="navigateTo('app/report')">
           <div class="menu-item-icon">
             <img alt="Menu Hasil Voting" [src]="deployUrl+'assets/app/menu/chart-pie.svg'" />
           </div>
