update template visi misi

--- a/src/app/vote/candidate-detail/candidate-detail.page.html
+++ b/src/app/vote/candidate-detail/candidate-detail.page.html
@@ -37,7 +37,7 @@
     </ion-row>
     <ion-row>
       <ion-col class="ph-16">
-        <ion-note>{{ candidate?.candidate_mission }}</ion-note>
+        <ion-note [innerHTML]="candidate?.candidate_mission"></ion-note>
       </ion-col>
      </ion-row>
   </ion-grid>
