--- a/src/app/tabs/home/home.page.html
+++ b/src/app/tabs/home/home.page.html
@@ -25,7 +25,7 @@
         <ion-card-subtitle>admin</ion-card-subtitle>
       </ion-card-header>
       <ion-card-content>
-        {{ item.body }}
+        <div [innerHTML]="item.body"></div>
         <!-- <button class="button-more">more</button> -->
         <div class="date">
           {{ item.postDate }}
