--- a/src/app/tabs/report-detail/report-detail.page.html
+++ b/src/app/tabs/report-detail/report-detail.page.html
@@ -1,13 +1,13 @@
 <ion-header [translucent]="false">
   <ion-toolbar>
-    <ion-title>BEM Fasilkom</ion-title>
+    <ion-title>{{ categoryName }}</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">BEM Fasilkom</ion-title>
+      <ion-title size="large">{{ categoryName }}</ion-title>
     </ion-toolbar>
   </ion-header>
 
@@ -29,23 +29,6 @@
         </p>
       </div>
     </ion-card>
-
-    <!-- <ion-card class="tapable">
-      <div>
-        sadasdasd
-      </div>
-      <ion-card-header>
-        <ion-card-subtitle>{{ candidate.candidate_name }}</ion-card-subtitle>
-      </ion-card-header>
-      <ion-card-content>
-        <div style="padding-bottom: 8px;">
-          {{ ((candidate.count_result / candidate.count_total) * 100).toFixed(2) }}%
-        </div>
-        <div>
-          <span>{{ candidate.count_result }} Suara</span> / <span>{{ candidate.count_total }} Total Suara</span>
-        </div>
-      </ion-card-content>
-    </ion-card> -->
   </div>
 
 </ion-content>
